workflow - update github tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,6 @@ jobs:
       matrix:
         go-version:
           - stable
-          - oldstable
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -26,16 +25,6 @@ jobs:
           go-version: ${{ matrix.go-version }}
           check-latest: true
 
-      - name: Download dependencies
-        run: go mod download
-
-      - name: Run tests with race detector and coverage
-        run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./coverage.txt
-          flags: unittests
-          fail_ci_if_error: true
+      - name: Run tests with race detector
+        run: go test -race ./...
 
